--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,8 @@ jobs:
         # You may pin to the exact commit or the version.
         # uses: snyk/release-notes-preview@77b57680e453abd052d6e029e84037b644251ee8
         uses: snyk/release-notes-preview@v1.6.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
         
       - name: Semantic Releaser
         # You may pin to the exact commit or the version.
