--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,6 @@ jobs:
         uses: cycjimmy/semantic-release-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-     #   with:
-     #     extra_plugins: |
-     #       @semantic-release/changelog@3.0.0
+        with:
+          extra_plugins: |
+            @semantic-release/changelog@3.0.0
