feat(xx): Trying to change changelog

--- a/.releaserc
+++ b/.releaserc
@@ -1,6 +1,7 @@
 {
   "branches": ["master"],
   "plugins": [
-    "@semantic-release/changelog"
+    "@semantic-release/changelog",
+    "@semantic-release/git"
   ]
 }
