--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,6 @@ jobs:
         with:
           extra_plugins: |
             @semantic-release/changelog@3.0.0
-            @semantic-release/git
+            #@semantic-release/git
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
