--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
         uses: cycjimmy/semantic-release-action@v2
         with:
           extra_plugins: |
-            @semantic-release/changelog@3.0.0
+            @semantic-release/changelog
             #@semantic-release/git
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
