fix(releae): Removing extra plugins section
With this section the default ones are not loaded

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,9 +39,9 @@ jobs:
 
       - name: Semantic Releaser
         uses: cycjimmy/semantic-release-action@v2
-        with:
-          extra_plugins: |
-            @semantic-release/changelog
-            #@semantic-release/git
+        #with:
+        #  extra_plugins: |
+        #    @semantic-release/changelog
+        #    @semantic-release/git
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
