fix(xxx): Removing all plugins

--- a/.releaserc
+++ b/.releaserc
@@ -1,6 +1,6 @@
 {
   "branches": ["master"],
-  "plugins": [
-    "@semantic-release/changelog",
-  ]
+#  "plugins": [
+#    "@semantic-release/changelog",
+#  ]
 }
