--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,6 +3,7 @@
   "plugins": [                                                                               
     ["@semantic-release/commit-analyzer", { "preset": "angular" }],                          
     "@semantic-release/release-notes-generator",                                             
+    ["@semantic-release/npm", { "npmPublish": false }],
     ["@semantic-release/changelog", { "preset": "angular" }],                                
     ["@semantic-release/git", {                                                              
       "assets": ["package.json", "CHANGELOG.md"],                                            
