--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
         uses: tibdex/github-app-token@v1.0.2
         with:
           app_id: ${{ secrets.AUTOMATION_APP_ID }}
-          private_key: ${{ secrets.AUTOMATION_APP_PEM }}
+          private_key: ${{ secrets.AUTOMATION_APP_SECRET }}
 
       - name: Semantic Releaser
         uses: cycjimmy/semantic-release-action@v2.5.3
